--- a/producthunt/templates/base.html
+++ b/producthunt/templates/base.html
@@ -169,7 +169,7 @@
 <header data-bs-theme="light">
   <nav class="navbar navbar-expand-lg bg-body-tertiary">
   <div class="container">
-    <a class="navbar-brand" href="#">
+    <a class="navbar-brand" href="{% url 'home' %}">
       <img src="{% static 'logo.png' %}" alt="logo" class="d-inline-block" height=30 width=30/>
         Product Hunt
     </a>
@@ -179,6 +179,13 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav ms-auto">
           {% if user.is_authenticated %}
+              <li class="nav-item"> 
+                  <a class="nav-link" href="{% url 'create' %}">
+                      <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" fill="currentColor" class="bi bi-plus" viewBox="0 0 16 16">
+                        <path d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4"/>
+                      </svg>
+                  </a>
+              </li>
             <li class="nav-item">
               <a class="nav-link" href="javascript:{document.getElementById('logout').submit()}">Logout</a>
                 <form action="{% url 'logout' %}" id="logout" method="POST">
