--- a/products/templates/products/home.html
+++ b/products/templates/products/home.html
@@ -2,4 +2,29 @@
 
 {% block content %}
 
+    {% for product in products.all %}
+    <div class="row pb-3">
+        <div class="col-2" onclick="window.location='{% url 'detail' product.id %}';" style="cursor: pointer;">
+            <img src="{{ product.icon.url }}" alt="image" class="img-fluid">
+        </div>
+        <div class="col-6" onclick="window.location='{% url 'detail' product.id %}';" style="cursor: pointer;">
+            <h1>{{ product.title }}</h1>
+            <p>{{ product.summary }}</p>
+        </div>
+        <div class="col-4">
+            <a href="javascript:{document.getElementById('upvote{{ product.id }}').submit()}">
+                <button class="btn btn-primary btn-lg btn-block">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-caret-up-fill" viewBox="0 0 16 16">
+                    <path d="m7.247 4.86-4.796 5.481c-.566.647-.106 1.659.753 1.659h9.592a1 1 0 0 0 .753-1.659l-4.796-5.48a1 1 0 0 0-1.506 0z"/>
+                    </svg>
+                    Upvote {{ product.votes_total }}</button>
+            </a>
+        </div>
+    </div>
+    <form id="upvote{{ product.id }}" action="{% url 'upvote' product.id %}" method="POST">
+        {% csrf_token %}
+        <input type="hidden"/>
+    </form>
+    {% endfor %}
+    
 {% endblock %}
